Update run test task to generate the coverage report